@@ -9,6 +9,10 @@ val libs: VersionCatalog = extensions.getByType<VersionCatalogsExtension>().name
 
 java { toolchain { languageVersion.set(JavaLanguageVersion.of(libs.jdk.toString())) } }
 
+tasks.withType<JavaCompile>().configureEach {
+  options.compilerArgs.add("--enable-preview")
+}
+
 testing {
   suites {
     val test by getting(JvmTestSuite::class) { useJUnitJupiter(libs.junitVersion.toString()) }
